<resources>
    <string name="app_name">Oéssit</string>
    <string name="title_activity_maps">Oéssit</string>
    <string name="title">Message important</string>
    <string name="textMessageConfirmation">cette application requiert l\'accès au gps. Veuillez accepter ou désinstaller l\'application.</string>
    <string name="accept">Accepter</string>
    <string name="decline">Refuser</string>
    <string name="item">item</string>
    <string name="favori">Favoris</string>
    <string name="favorites">Stations Favorites</string>
    <string name="buttonFavorite">buttonFavorite</string>
    <string name="meters">%d mètres</string>
    <string name="login">Connexion</string>
    <string name="password">Mot de passe (min. 6 charactères)</string>
    <string name="password2">Mot de passe</string>
    <string name="notRegister">Pas encore inscrit ?</string>
    <string name="success">Connexion réussie</string>
    <string name="failure">Echec de connexion</string>
    <string name="failure_toast">Echec de connexion</string>
    <string name="snippet_text">Ligne : %s \nDistance : %d mètres</string>
    <string name="b">B</string>
    <string name="a">A</string>
    <string name="switch_add_to_favorite">Ajouter aux favoris</string>
    <string name="textForIdMetro">TextView</string>
    <string name="textForNextMetro">TextView</string>
    <string name="pseudo">Identifiant</string>
    <string name="email">Email</string>
    <string name="register">Enregistrement</string>
    <string name="authenticationFailed">Echec de connexion.</string>
    <string name="confirm_password">Veuillez confirmez votre mot de passe</string>
    <string name="logout">Déconnexion</string>
    <string name="login_with_google">Connexion au compte Google</string>
    <string name="Google_sign_in_failed">Erreur de connexion au compte google.</string>
    <string name="signIn_with_credential_success">signInWithCredential:success</string>
    <string name="signIn_With_Credential_failure">signIWithCredential:failure</string>
    <string name="Authentication_failed">Echec de conexion.</string>
    <string name="googlesignin">Connexion avec google</string>
    <string name="add_to_favorite">Ajouter aux favoris</string>
    <string name="Important_message">Message important</string>
    <string name="warning">Vous devez être connecté pour ajouter des stations à vos favoris.</string>
    <string name="sign_in">Connexion</string>
    <string name="already_in_your_fav">Cette station est déjà dans vos Favoris !</string>
    <string name="ok">OK</string>
    <string name="station_added"> %s a bien été ajoutée à vos Favoris</string>
    <string name="schedule">Horaires</string>
    <string name="distance">Distance : %d mètres</string>
    <string name="must_sign_in">Vous devez être connecté pour voir vos stations favorites.</string>
    <string name="space" />
    <string name="welcome_name">Bienvenue %s</string>
    <string name="add_favorite">Voulez-vous vraiment retirer cette station de vos favoris ?</string>
    <string name="yes">Oui</string>
    <string name="no">Non</string>
    <string name="timetable">Prochains passages</string>
    <string name="_2nd_train">2nd métro</string>
    <string name="_1st_train">Prochains départs</string>
    <string name="direction">DIRECTION</string>
    <string name="distance_metro">Distance : %s mètres</string>
    <string name="listview">ListView</string>
    <string name="mapview">MapView</string>
</resources>
