<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/btMapView"
        android:icon="@drawable/map"
        android:title="@string/mapview"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/btListView"
        android:icon="@drawable/ic_reorder_black_24dp"
        android:title="@string/listview"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/itemMenuRegister"
        android:title="@string/register" />
    <item
        android:id="@+id/itemMenuLogin"
        android:title="@string/login" />
    <item
        android:id="@+id/itemMenuFav"
        android:title="@string/favorites" />
    <item
        android:id="@+id/itemMenuLogout"
        android:title="@string/logout" />
</menu>